# dask-app-package

./: .gitignore  404.html  README.md  Taskfile.yaml  bai.py  dispose-dask.py  end-dask.sh  index.html  init-dask.py  mkdocs.yml  project.toml  start-dask.sh
.github/workflows/: build.yaml  docs.yaml
apps/cloudless-mosaic/: index.html
apps/cloudless-mosaic/cli/: index.html
apps/cloudless-mosaic/execute/: index.html
apps/cloudless-mosaic/workflow/: index.html
apps/eopf-sentinel-2/: index.html
apps/eopf-sentinel-2/cli/: index.html
apps/eopf-sentinel-2/execute/: index.html
apps/eopf-sentinel-2/workflow/: index.html
calrissian-dask/: index.html
cloudless-mosaic/: Dockerfile  README.md  codemeta.json  notebook.ipynb  pyproject.toml
cloudless-mosaic/src/cloudless_mosaic/: app.py
conclusion/: index.html
cwl-workflows/: cloudless-mosaic.cwl  eopf-sentinel-2.cwl  monthly-composite.cwl
docs/: calrissian-dask.md  index.md
docs/apps/cloudless-mosaic/: cli.md  execute.md  index copy.md  index.md  workflow.md
docs/apps/eopf-sentinel-2/: cli.md  execute.md  index.md  workflow.md
eopf-sentinel-2/: Dockerfile  README.md  codemeta.json  notebook.ipynb  pyproject.toml  test.ipynb  trash.md
eopf-sentinel-2/src/eopf_sentinel_2/: app.py  overview.py
packaging/: index.html
packaging/cli/: index.html
packaging/container/: index.html
packaging/execute/: index.html
packaging/release/: index.html
packaging/workflow/: index.html
search/: search_index.json
