[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudless-mosaic"
dynamic = ["version"]
description = 'Calrissian-Dask demo app-package'
requires-python = ">=3.8"
license = "MIT"
keywords = ["Dask", "Calrissian"]




authors = [
  { name = "Leonardo Mizzoni", email = "leonardo.mizzoni@terradue.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy==1.26.3",  
  "dask==2024.1.0", 
  "distributed==2024.1.0",
  "dask-gateway==2024.1.0",
  "pystac",
  "bokeh==3.6.2",
  "rioxarray==0.18.1",
  "loguru==0.7.3",
  "odc-stac[botocore]==0.3.10",
  "stackstac==0.5.1",
  "pystac-client",
  "planetary-computer",
  "xarray-spatial",
  "shapely",
  "rio-stac",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/cloudless_mosaic/__about__.py"

source_pkgs = ["src/cloudless_mosaic"]

[project.scripts]
cloudless-mosaic = "cloudless_mosaic.app:start"

[tool.hatch.envs.dev]
python = "3.10"

[tool.hatch.envs.prod]
path = "/app/envs/cloudless-mosaic"
