[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eopf-sentinel-2"
dynamic = ["version"]
description = 'EOPF Sentinel-2'
requires-python = ">=3.8"
license = "MIT"
keywords = ["Dask", "Calrissian"]

authors = [
  { name = "Leonardo Mizzoni", email = "leonardo.mizzoni@terradue.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy==1.26.3",  
  "dask==2025.4.0", 
  "distributed==2025.4.0",
  "dask-gateway==2025.4.0",
  "pystac",
  "rioxarray==0.18.1",
  "loguru==0.7.3",
  "xarray-spatial",
  "rio-stac",
  "rio-color",
  "click",
  "bokeh==3.6.2",
  "xarray[complete]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/eopf_sentinel_2/__about__.py"

source_pkgs = ["src/eopf_sentinel_2"]

[project.scripts]
eopf-sentinel-2-proc = "eopf_sentinel_2.app:start"

[tool.hatch.envs.dev]
python = "3.10"

[tool.hatch.envs.prod]
python = "3.10"
path = "/app/envs/eopf_sentinel_2"


